core/scss/prototype.scss
/* ... */
/* ==========================================================================
  br-prototype-nav
   ========================================================================== */

/* Variables
   ========================================================================== */

$br-prototype-nav-width: 250px; // Keep this in px please, otherwise it gets buggy

/* Sidebar
   ========================================================================== */

// We are supposing this is true within all projects
html.br-styleguide,
.br-styleguide body {
  margin: 0;
}

html.br-prototype-nav-is-open {
  position: relative;
  left: $br-prototype-nav-width;
  width: calc(100% - #{$br-prototype-nav-width});
}

.br-prototype-nav {
  background-color: #FFF;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  line-height: 1.5;
  z-index: 2000;
  transform: translateX(-100%);
  width: $br-prototype-nav-width;
  overflow: hidden;
  display: flex;
  flex-direction: column;

  .br-prototype-nav-inner {
    padding: 2rem*$br-rem-multiplier;
    overflow: hidden;
    overflow-y: auto;
  }

  &.br-prototype-nav-open {
    transform: translateX(0);
    box-shadow: 0.2rem*$br-rem-multiplier 0 0.5rem*$br-rem-multiplier rgba(#000, 0.3);
  }
}

.br-prototype-lang {
  font-size: 1.3rem*$br-rem-multiplier;
}

.br-prototype-langselector {
  margin-bottom: 10px;
}

.br-prototype-nav-text {
  font-size: 1.3rem*$br-rem-multiplier;
  margin: 0;
  padding: 0 0 0.6rem*$br-rem-multiplier;
  color: rgba(#000,0.5);
}

/* Headings (both on index page and in sidebar)
   ========================================================================== */

.br-prototype-nav-main-heading {
  color: #000;
  font-weight: $br-heading-font-weight;
  margin: 0;
}

/* Index page
   ========================================================================== */

.br-prototype-nav-index {
  padding: 2rem*$br-rem-multiplier;
}

.br-prototype-nav-index-cols {
  column-count: 3;
  li {
    break-inside: avoid;
  }
}

/* Page states
   ========================================================================== */

.br-prototype-page-states {
  background: rgba(#FFF,0.05);
  box-shadow: 0.2rem*$br-rem-multiplier 0 0.5rem*$br-rem-multiplier rgba(#000, 0.3);
  margin-top: auto;
  padding: 2rem*$br-rem-multiplier;
}

.br-tree-dir-state-count {
  float: right;
  padding: 0 0.4rem*$br-rem-multiplier;
  border-radius: 3px;
  background-color: #eee;
  font-size: 1.2rem*$br-rem-multiplier;
}

/* Utilities 
   ========================================================================== */

.br-reset-link-styling {
  text-decoration: none;
  color: #000;
}

/* Expanded/collapsed states for directories
   Only in side navigation
   ========================================================================== */

.br-bordered-list {
  list-style: none;
  padding: 0;
}

.br-prototype-nav {

  .br-bordered-list ul {
    padding: 0 0 0 1.8rem*$br-rem-multiplier;
    list-style: none;
  }

  .br-tree-dir {

    .br-tree-dir-title {
      margin: 0;
      cursor: default;
      font-weight: 400;

      &:before {
        content: '';
        width: 0;
        height: 0;
        display: inline-block;
        text-align: center;

        // CSS triangle
        border: 0;
        border-left: 0.4rem*$br-rem-multiplier solid transparent;
        border-right: 0.4rem*$br-rem-multiplier solid transparent;
        border-top: 0.4rem*$br-rem-multiplier solid #999;

        margin-left: 0.2rem*$br-rem-multiplier;
        margin-right: 0.4rem*$br-rem-multiplier;

        position: relative;
        top: -0.3rem*$br-rem-multiplier;
      }
    }
  }

  .br-tree-dir--is-collapsed {
    * {
      display: none;
    }

    > .br-tree-dir-title {
      display: block;

      &:before {
        // CSS triangle
        border: 0;
        border-top: 0.4rem*$br-rem-multiplier solid transparent;
        border-bottom: 0.4rem*$br-rem-multiplier solid transparent;
        border-left: 0.4rem*$br-rem-multiplier solid #999;

        margin-left: 0.35rem*$br-rem-multiplier;
        margin-right: 0.65rem*$br-rem-multiplier;
        top: 0;
      }
    }
  }

}


/* br-component
   ========================================================================== */

.br-component-header {
  font-size: 2.4rem*$br-rem-multiplier;
  font-weight: $br-heading-font-weight;
}

/* br-sample
   ========================================================================== */

.br-sample {
  padding: 1.2rem*$br-rem-multiplier 0;
}

.br-sample-clearfix:before,
.br-sample-clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.br-sample-clearfix:after {
  clear: both;
}

.br-sample-btn {
  background: #FFF;
  border: 1px solid $br-sample-border-color;
  display: inline-block;
  padding: 0.5rem*$br-rem-multiplier 0.8rem*$br-rem-multiplier;
  border-radius: 0.4rem*$br-rem-multiplier;
  margin: 0 0 1rem*$br-rem-multiplier;
  font-size: 1.2rem*$br-rem-multiplier;
  &:hover {
    background: #FFF;
  }
}

.br-sample-footer {
  position: relative;
}

.br-sample-copy-code-btn {
  position: absolute;
  z-index: 3;
  top: 5.5rem*$br-rem-multiplier;
  right: 1rem*$br-rem-multiplier;
  display: none;
  .br-sample-code:hover & {
    display: block;
  }
}

.br-sample-markup {
  margin-top: 1rem*$br-rem-multiplier;
  background: $br-code-background;
  border: 1px solid $br-code-border-color;
  padding: 1rem*$br-rem-multiplier;
  position: relative;
  .CodeMirror {
    background: transparent;
  }
}

.br-sample-content {
  background: #FFF;
  padding: 3rem*$br-rem-multiplier;
  border: 1px solid $br-sample-border-color;
  margin: 1rem*$br-rem-multiplier 0;
  position: relative;
  overflow: hidden;
  resize: vertical;
}

.br-sample-content-is-layout {
  min-height: 500px;
}

.br-sample-header .br-sample-header-link {
  float: right;
  color: rgba(0,0,0,0.45);
  font-size: 1.6rem*$br-rem-multiplier;
  margin: 1rem*$br-rem-multiplier 0;
  padding: 0 0.2rem*$br-rem-multiplier 0 0;
}
/* ... */

